--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,6 +1,13 @@
-!!!
+!!! 5
 html
   head
     title= title
+    meta(name='viewport', content='initial-scale=1,maximum-scale=1,minimum-scale=1 user-scalable=no,width = 320')
+    meta(name='viewport', content='width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;')
+    meta(name='apple-mobile-web-app-capable', content='yes')
+    meta(name='apple-mobile-web-app-status-bar-style', content='default')
+    script(type='text/javascript', src='/javascripts/jqtouch/jquery-1.7.min.js')
+    script(type='text/javascript', src='/javascripts/jqtouch/jqtouch.js')
+    link(rel='stylesheet', href='/stylesheets/jqtouch/jqtouch.css', type='text/css', media='screen')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body!= body
