--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,6 +8,7 @@ html
     meta(name='apple-mobile-web-app-status-bar-style', content='default')
     script(type='text/javascript', src='/javascripts/jqtouch/zepto.min.js')
     script(type='text/javascript', src='/javascripts/jqtouch/jqtouch.js')
+    script(type='text/javascript', src='http://maps.googleapis.com/maps/api/js?key=AIzaSyDH-dhEXaxZujI5kmQxd4uVMXCuvlHypKM&sensor=true')
     script(type='text/javascript', src='/javascripts/global.js')
     link(rel='stylesheet', href='/stylesheets/jqtouch/apple.css', type='text/css', media='screen')
     link(rel='stylesheet', href='/stylesheets/style.css')
